--- a/az.html
+++ b/az.html
@@ -25,7 +25,7 @@
 			<a href = "i24.html" class="sidebar_item"> Earthworks </a>
 			<a href = "i23.html" class="sidebar_item"> Matriarchs </a>
 			<a href = "contact.html" class="contact"> About </a>
-			<a href = "assets/img/resume2.pdf" class="contact"> Resume </a>
+			<a href = "assets/img/anissarashid_resume.pdf" class="contact"> Resume </a>
 		</div>
 	</div>
 
