--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,7 @@
 			<a href = "i24.html" class="sidebar_item"> Earthworks </a>
 			<a href = "i23.html" class="sidebar_item"> Matriarchs </a>
 			<a href = "contact.html" class="contact"> About </a>
-			<a href = "assets/img/resume2.pdf" class="contact"> Resume </a>
+			<a href = "assets/img/anissarashid_resume.pdf" class="contact"> Resume </a>
 		</div>
 	</div>
 
@@ -40,7 +40,7 @@
 		<p class="contacttxt"> Hello, I'm Anissa! I'm currently studying Economics, Data Science, and Design at UC Berkeley. I have a variety of experience in visual design, web design, branding, creative direction, and physical prototyping. 
 		<br><br> I'm a creative and driven person, and I'm passionate about designing beautiful, inclusive, and functional experiences. I believe in visually sharing stories and representing my communities throughout my creative work. I am currently looking for new opportunities to grow and develop as a designer. 
 		
-		<br><br><a href = "assets/img/resume2.pdf"> <span style="font-weight: bold; font-size: 20px;"> Resume </span></a>
+		<br><br><a href = "assets/img/anissarashid_resume.pdf"> <span style="font-weight: bold; font-size: 20px;"> Resume </span></a>
 
 		<br><br> <span style="font-weight: bold; font-size: 20px"> Let's talk! </span>
 		<br> Email: anissarashid@berkeley.edu 
