--- a/his.html
+++ b/his.html
@@ -12,6 +12,9 @@
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 	<link href="https://fonts.googleapis.com/css?family=Work+Sans:400,500,600,700,800,900&display=swap" rel="stylesheet">
 	<link rel="shortcut icon" type="image/x-icon" href="assets/img/favicon.ico?">
+	<link rel="stylesheet" href="https://use.typekit.net/osp0fvo.css">
+
+
 
 	
 </head>
@@ -32,14 +35,14 @@
 			<a href = "i24.html" class="sidebar_item"> Earthworks </a>
 			<a href = "i23.html" class="sidebar_item"> Matriarchs </a>
 			<a href = "contact.html" class="contact"> About </a>
-			<a href = "assets/img/resume2.pdf" class="contact"> Resume </a>
+			<a href = "assets/img/anissarashid_resume.pdf" class="contact"> Resume </a>
 		</div>
 	</div>
 
 	<div class="container">
 		<p class="dTitle"> His Pills </p>
 		<div class="description">
-			<p class="description_txt"> Born out of the frustration that the majority of contraceptive methods are made for women rather than men, I created this brand to broaden our perspective towards birth control and to balance the responsibility equally. Female birth control can be a difficult for women to use, as it directly affects their hormones and can have extreme side effects. I wanted this brand to challenge the association with women and birth control responsibility by introducing what an alternative form for men could look like. His Pills is a birth control company that sells "the pill" to men or non-binary people. <br> *I use the term "male birth control," but this pill applies to anybody who wants a safe form of birth control that will prevent pregnancy for their partner. <br> <br><span class="boldwrd"> Timeline: </span> 4 months - Spring 2020 <br> <span class = "boldwrd"> Design challenge: </span> Build a brand idenity for your own company.
+			<p class="description_txt"> Born out of the frustration that the majority of contraceptive methods are made for women rather than men, I created this brand to broaden our perspective towards birth control and to balance the responsibility equally. Female birth control can be a difficult for women to use, as it directly affects their hormones and can have extreme side effects. I wanted this brand to challenge the association with women and birth control responsibility by introducing what an alternative form for men could look like. His Pills is a birth control company that sells "the pill" to men or non-binary people. <br> *I use the term "male birth control," but this pill applies to anybody who wants a safe form of birth control that will prevent pregnancy for their partner. <br> <br><span style="font-weight: 700;"> Timeline: </span> 4 months - Spring 2020 <br> <span style="font-weight: 700;"> Design challenge: </span> Build a brand idenity for your own company.
 			</p>
 			
 		</div>
