--- a/az.html
+++ b/az.html
@@ -32,26 +32,28 @@
 	<div class="container">
 		<p class="dTitle">AZ Lyrics - Redesign </p>
 		<div class="description">
-			<p class="description_txt"> As a project for the Web Design Decal (Spring 2019), my team and I redesinged the AZ Lyrics website. We were inspried by brutalist design, and decided to completely redesign the wesite to make it more user friendly and modern. <br> <span class="boldwrd"> Timeline: </span> 2 weeks - Spring 2019 <br> <span class = "boldwrd"> Design challenge: </span> Redesign the AZ Lyrics website, with a landing page, search page, lyric page, and artist page. 
+			<p class="description_txt"> As a project for the Web Design Decal (Spring 2019), my team and I redesinged the AZ Lyrics website. We were inspried by brutalist design, and decided to completely redesign the wesite to make it more user friendly and modern. <br>
+				<br> <span style="font-weight: 600;"> Timeline: </span> 2 weeks - Spring 2019
+				 <br> <span style="font-weight: 600;"> Design challenge: </span> Redesign the AZ Lyrics website, with a landing page, search page, lyric page, and artist page. 
 			</p>
 			
 		</div>
 
 		<p class="description_txt"> <span class= "boldwrd"> First iteration: </span>
 		<div class="pics">
-			<img class="portpics" src="assets/img/az1.png" width="300px">
-			<img class="portpics" src="assets/img/az2.png" width="300px">
-			<img class="portpics" src="assets/img/az3.png" width="300px">
-			<img class="portpics" src="assets/img/az4.png" width="300px">
+			<img class="portpics" src="assets/img/az1.png" width="370px">
+			<img class="portpics" src="assets/img/az2.png" width="370px">
+			<img class="portpics" src="assets/img/az3.png" width="370px">
+			<img class="portpics" src="assets/img/az4.png" width="370px">
 			<p class="description_txt_1"> Above are our first iterations for the home page and lyric page redesigns, and below those is how the current AZ Lyrics website looks. We wanted to keep the site as simple as possible, while keeping some of the elements such as color and the alphabet theme consistent. We simplified the homepage to only include text and no images, and we wanted to add a feature to the lyric page that allowed users to easily navigate to the album or artist of the song they're on.  </p>
 		</div>
 		
 		<p class="description_txt"> <span class= "boldwrd"> Wireframe: </span>
 		<div class="pics">
-			<img class="portpics" src="assets/img/az5.png" width="300px">
-			<img class="portpics" src="assets/img/az6.png" width="300px">
-			<img class="portpics" src="assets/img/az7.png" width="300px">
-			<img class="portpics" src="assets/img/az8.png" width="300px">
+			<img class="portpics" src="assets/img/az5.png" width="370px">
+			<img class="portpics" src="assets/img/az6.png" width="370px">
+			<img class="portpics" src="assets/img/az7.png" width="370px">
+			<img class="portpics" src="assets/img/az8.png" width="370px">
 			<p class="description_txt_1"> We inspired by brutalist design and decided to further simplify the site. To make the site more minimal we decided to use a light gray background instead of the original purple and reduced the amount of text and image even more, only keeping the necessary information.  </p> 
 			<p class="description_txt_1"> For the homepage, we wanted to make it as easy as possible for users to search for their desired song, artist, or album, and we kept some elements similar to our previous idea - such as the font and eye logo. </p>
 			<p class="description_txt_1">The top right is the wireframe for the search page, so if somebody searches for a particular artist, they can clearly see the results for top songs, albums, artist results through the bold text or recognizable visuals. </p>
@@ -62,7 +64,7 @@
 
 		<p class="description_txt"> <span class= "boldwrd"> Final website: </span>
 		<div class="pics">
-			<a href= "http://anissarashid.me/azlyrics/"> <video class="portpics" width="697" preload controls muted="true">
+			<a href= "http://anissarashid.me/azlyrics/"> <video class="portpics" width="697" preload controls autoplay loop muted="true">
 				<source src="assets/img/azvid.mp4">
 			</video> </href>
 
