--- a/contact.html
+++ b/contact.html
@@ -8,8 +8,9 @@
 	<link href="https://fonts.googleapis.com/css?family=Work+Sans:400,500,600,700,800,900&display=swap" rel="stylesheet">
 	<link rel="shortcut icon" type="image/x-icon" href="assets/img/favicon.ico?">
 
+
 </head>
-<body>
+<body >
 	<div class="pagecont">
 	<div class="menu">
 		<a href= "index.html" class="name"> Anissa Rashid</a>
@@ -30,12 +31,12 @@
 		</div>
 	</div>
 
-	<div class="container">
+	<div class="containercontact">
 		
 	<p class="dTitle"> About me</p>
 
 	<div class="pics">
-		<img class="contactpic" src="assets/img/about.png" >
+		<img class="contactpic" src="assets/img/about.png" height ="400px">
 
 		<p class="contacttxt"> Hello, I'm Anissa! I'm currently studying Economics, Data Science, and Design at UC Berkeley. I have a variety of experience in visual design, web design, branding, creative direction, and physical prototyping. 
 		<br><br> I'm a creative and driven person, and I'm passionate about designing beautiful, inclusive, and functional experiences. I believe in visually sharing stories and representing my communities throughout my creative work. I am currently looking for new opportunities to grow and develop as a designer. 
