--- a/exhale.html
+++ b/exhale.html
@@ -46,7 +46,7 @@
 		<p class="description_txt"> <span class= "boldwrd"> Website: </span>
 		<div class="pics">
 			<a href="https://anissarashid.github.io/exhale/">
-			<video class="portpics" width="473" height="270" preload controls>
+			<video class="portpics" width="700" preload controls autoplay loop muted >
 				<source src="assets/img/exhale.mp4">
 			</video>
 			</a>
@@ -54,10 +54,10 @@
 		</div>
 
 		
-		<p class="description_txt"> <span class= "boldwrd"> Marketing Materials: </span>
+		<p class="description_txt"> <span class= "boldwrd"> Branding Materials: </span>
 		<div class="pics">
-			<img class="portpics" src="assets/img/stickernew.png" width="300px">
-			<img class="portpics" src="assets/img/stickernew2.png" width="300px">
+			<img class="portpics" src="assets/img/stickernew.png" width="500px">
+			<img class="portpics" src="assets/img/stickernew2.png" width="500px">
 			<p class="description_txt_1"> These are two sticker or flyer designs that could be printed and distributed around UC Berkeley in order to spread awareness of this digital tool. </p>
 
 		</div>
