--- a/his.html
+++ b/his.html
@@ -14,10 +14,8 @@
 	<link rel="shortcut icon" type="image/x-icon" href="assets/img/favicon.ico?">
 	<link rel="stylesheet" href="https://use.typekit.net/osp0fvo.css">
 
-
-
-	
 </head>
+
 <body>
 	<div class="pagecont">
 	<div class="menu">
@@ -42,7 +40,8 @@
 	<div class="container">
 		<p class="dTitle"> His Pills </p>
 		<div class="description">
-			<p class="description_txt"> Born out of the frustration that the majority of contraceptive methods are made for women rather than men, I created this brand to broaden our perspective towards birth control and to balance the responsibility equally. Female birth control can be a difficult for women to use, as it directly affects their hormones and can have extreme side effects. I wanted this brand to challenge the association with women and birth control responsibility by introducing what an alternative form for men could look like. His Pills is a birth control company that sells "the pill" to men or non-binary people. <br> *I use the term "male birth control," but this pill applies to anybody who wants a safe form of birth control that will prevent pregnancy for their partner. <br> <br><span style="font-weight: 700;"> Timeline: </span> 4 months - Spring 2020 <br> <span style="font-weight: 700;"> Design challenge: </span> Build a brand idenity for your own company.
+			<p class="description_txt"> Born out of the frustration that the majority of contraceptive methods are made for women rather than men, I created this brand to broaden our perspective towards birth control and to balance the responsibility equally. Female birth control can be a difficult for women to use, as it directly affects their hormones and can have extreme side effects. I wanted this brand to challenge the association with women and birth control responsibility by introducing what an alternative form for men could look like. His Pills is a birth control company that sells "the pill" to men or non-binary people. <br> *I use the term "male birth control," but this pill applies to anybody who wants a safe form of birth control that will prevent pregnancy for their partner. <br> <br>
+				<span style="font-weight: 600;"> Timeline: </span> 4 months - Spring 2020 <br> <span style="font-weight: 600;"> Design challenge: </span> Build a brand idenity for your own company.
 			</p>
 			
 		</div>
@@ -54,7 +53,6 @@
 			<img class="portpics" src="assets/img/his3.png" height="200px">
 			<img class="portpics" src="assets/img/his4.png" height="200px">
 			<img class="portpics" src="assets/img/his5.png" height="200px">
-		
 			<img class="portpics" src="assets/img/logosfinal.png" height ="200px">
 			<img class="portpics" src="assets/img/logosfinal2.png" height="200px">
 			<p class="description_txt_1"> I wanted His Pills to have bold and playful branding, without presenting a hyper-masculine tone through the font or color palette. I explored multiple different color palettes and logo designs to sucessfully convey this brand as one that pushes healthcare boundaries and appeals to men without conforming to gender stereotypes. </p>
@@ -68,14 +66,14 @@
 
 		<p class="description_txt"> <span class= "boldwrd"> Packaging </span>
 		<div class="pics">
-			<img class="portpics" src="assets/img/mock4.jpg" height="200px" style="box-shadow: 0px 0px 15px 0px rgba(107,107,107,1);">
-			<img class="portpics" src="assets/img/mock6.png" height="200px" style="box-shadow: 0px 0px 15px 0px rgba(107,107,107,1);">
+			<img class="portpics" src="assets/img/mock4.jpg" width="500px">
+			<img class="portpics" src="assets/img/mock6.png"width="500px" >
 			<p class="description_txt_1"> Packaging for the pill boxes, each containing 32 tablets for the month.</p> 
 		</div>
 
 		<p class="description_txt"> <span class= "boldwrd"> Website </span>
 		<div class="pics">
-			<video width="500px"  preload controls style="margin-bottom: 20px;">
+			<video width="500px"  preload controls autoplay loop muted="true" style="margin-bottom: 20px;">
 				<source src="assets/img/website.mp4" type="video/mp4">
 			</video>
 			<p class="description_txt_1"> Wireframe for the company's website, includes information and help about the pill. </p> 
@@ -90,35 +88,35 @@
 
 		<p class="description_txt"> <span class= "boldwrd"> Posters </span>
 		<div class="pics">
-			<img class="portpics" src="assets/img/poster1.png" height="250px" style="box-shadow: 0px 0px 15px 0px rgba(107,107,107,1);"> 
-			<img class="portpics" src="assets/img/poster2.png" height="250px" style="box-shadow: 0px 0px 15px 0px rgba(107,107,107,1);">
-			<img class="portpics" src="assets/img/poster3.png" height="250px" style="box-shadow: 0px 0px 15px 0px rgba(107,107,107,1);">
-			<img class="portpics" src="assets/img/poster4.png" height="250px" style="box-shadow: 0px 0px 15px 0px rgba(107,107,107,1);">
-			<img class="portpics" src="assets/img/poster5.png" height="250px" style="box-shadow: 0px 0px 15px 0px rgba(107,107,107,1);">
-			<img class="portpics" src="assets/img/poster6.png" height="250px" style="box-shadow: 0px 0px 15px 0px rgba(107,107,107,1);">
+			<img class="portpics" src="assets/img/poster1.png" width ="300px" > 
+			<img class="portpics" src="assets/img/poster2.png" width ="300px" >
+			<img class="portpics" src="assets/img/poster3.png" width="300px" >
+			<img class="portpics" src="assets/img/poster4.png" width="300px" >
+			<img class="portpics" src="assets/img/poster5.png" width ="300px" >
+			<img class="portpics" src="assets/img/poster6.png" width ="300px" >
 			<p class="description_txt_1"> I created posters to advertise the brand in public spaces. I used bold typography and suggestive imagery to draw attention towards the posters, and to highlight this brands mission of providing a safe and alternative method of birth control. His Pills was designed to not only reinforce that birth control is a shared responsibility, but to also normalize conversations around sex and sex education. I felt that using more suggestive imagery and color pallettes would be an effective way to raise these important conversations. I also am aware that a male birth control pill is designed for mainly heterosexual relationships as its purpose is to prevent pregnancy, and that condoms are still the most effective way to prevent against STI's, so I wanted to make this disclaimer on the posters.  </p> 
 		</div>
 		
 		<p class="description_txt"> <span class= "boldwrd"> Business Cards </span>
 		<div class="pics">
-			<img class="portpics" src="assets/img/buscards1.png" height="100px" style="box-shadow: 0px 0px 15px 0px rgba(107,107,107,1);">
-			<img class="portpics" src="assets/img/buscards3.png" height="100px" style="box-shadow: 0px 0px 15px 0px rgba(107,107,107,1);">
-			<img class="portpics" src="assets/img/buscards5.png" height="100px" style="box-shadow: 0px 0px 15px 0px rgba(107,107,107,1);">
-			<img class="portpics" src="assets/img/buscards2.png" height="100px" style="box-shadow: 0px 0px 15px 0px rgba(107,107,107,1);">
-			<img class="portpics" src="assets/img/buscards4.png" height="100px" style="box-shadow: 0px 0px 15px 0px rgba(107,107,107,1);">
-			<img class="portpics" src="assets/img/buscards6.png" height="100px" style="box-shadow: 0px 0px 15px 0px rgba(107,107,107,1);">
+			<img class="portpics" src="assets/img/buscards1.png" height="200px" >
+			<img class="portpics" src="assets/img/buscards2.png" height="200px" >
+			<img class="portpics" src="assets/img/buscards5.png" height="200px" >
+			<img class="portpics" src="assets/img/buscards6.png" height="200px" >
+			<img class="portpics" src="assets/img/buscards3.png" height="200px" >
+			<img class="portpics" src="assets/img/buscards4.png" height="200px" >
 			<p class="description_txt_1"> I created three business cards that each used one color from the palette, and I paired the logo with Gopher. In order to maintain cohesion among the posters, I used the same line drawing and "wavy" type. These business cards are simple and cohesive with the other assets.  </p> 
 		</div>
 
 		<p class="description_txt"> <span class= "boldwrd"> Products </span>
 		<div class="pics">
-			<img class="portpics" src="assets/img/posterfinalmock1.png" height="200px" style="box-shadow: 0px 0px 15px 0px rgba(107,107,107,1);">
-			<img class="portpics" src="assets/img/posterfinalmock2.png" height="200px" style="box-shadow: 0px 0px 15px 0px rgba(107,107,107,1);">
-			<img class="portpics" src="assets/img/posterfinalmock3.png" height="200px" style="box-shadow: 0px 0px 15px 0px rgba(107,107,107,1);">
-			<img class="portpics" src="assets/img/mock5.jpg" height="200px" style="box-shadow: 0px 0px 15px 0px rgba(107,107,107,1);">
-			<img class="portpics" src="assets/img/posterfinalmock4.png" height="200px" style="box-shadow: 0px 0px 15px 0px rgba(107,107,107,1);">
-			<img class="portpics" src="assets/img/mock1.jpg" height="200px" style="box-shadow: 0px 0px 15px 0px rgba(107,107,107,1);">
-			<img class="portpics" src="assets/img/mock2.jpg" height="200px" style="box-shadow: 0px 0px 15px 0px rgba(107,107,107,1);">
+			<img class="portpics" src="assets/img/posterfinalmock1.png" width="350px" >
+			<img class="portpics" src="assets/img/posterfinalmock2.png" width="350px" >
+			<img class="portpics" src="assets/img/posterfinalmock3.png" width="350px" >
+			<img class="portpics" src="assets/img/mock5.jpg" width="350px" >
+			<img class="portpics" src="assets/img/posterfinalmock4.png" height="400px" >
+			<img class="portpics" src="assets/img/mock1.jpg" height="400px" >
+			<img class="portpics" src="assets/img/mock2.jpg" height="400px" >
 		</div>
 
 		<p class="description_txt"> <span class= "boldwrd"> Reflection </span>
