--- a/light.html
+++ b/light.html
@@ -33,43 +33,50 @@
 	<div class="container">
 		<p class="dTitle">Lightning McQueen</p>
 		<div class="description">
-			<p class="description_txt"> As a project for Prototyping and Fabrication, my team partner and I were prompted to build a bluetooth motorized chassis. This course taught skills in designing, prototyping, and fabricating for physical objects, including 2D and 3D modeling and fabrication, basic electronics, lasercutting, and 3D printing. <br> <br><span class="boldwrd"> Timeline: </span> 4 weeks - Summer 2019 <br> <span class = "boldwrd"> Team: </span> 2 people <br> <span class= "boldwrd"> Design challenge: </span> Create a bluetooth motorized chassis. <br>  </p>
+			<p class="description_txt"> As a project for Prototyping and Fabrication, my team partner and I were prompted to build a bluetooth motorized chassis. This course taught skills in designing, prototyping, and fabricating for physical objects, including 2D and 3D modeling and fabrication, basic electronics, lasercutting, and 3D printing. <br> 
+			<br> <span style="font-weight: 600;"> Timeline: </span> 4 weeks - Summer 2019 
+			<br> <span style="font-weight: 600;"> Design Challenge: </span> Create a bluetooth motorized chassis. <br>  </p>
 			
 		</div>
 
 		<p class="description_txt"> <span class= "boldwrd"> Cardboard prototype: </span>
 		<div class="pics">
-			<img class="portpics" src="assets/img/card1.png" width="225px">
-			<img class="portpics" src="assets/img/card2.png" width="225px">
+			<img class="portpics" src="assets/img/card1.png" width="350px">
+			<img class="portpics" src="assets/img/card2.png" width="350px">
 			<p class="description_txt_1"> Our initial idea for this project was to create movement through rotating the outer planetary gears. We envisioned using a rubber tread around the gears and motorizing the central gear in order to create movement. We believed that the triangular shape would work best because it would be light, stable, and fast. </p>
 		</div>
 		
 		<p class="description_txt"> <span class= "boldwrd"> Motorized chassis prototype: </span>
 		<div class="pics">
-			<img class="portpics" src="assets/img/motor1.png" height="180">
-			<video class="portpics" width="320" height="180" preload controls muted="true">
+			<img class="portpics" src="assets/img/motor1.png" height="300">
+			<video class="portpics" width="650" preload controls autoplay loop muted="true">
 				<source src="assets/img/final1.mp4">
 			</video>
 			<p class="description_txt_1"> Following our initial cardboard prototype, we laser cut .25” plywood and attached our motor to the center gear, which was used to spin the outer gears. We used a gear piece from another commercial motororized chassis, and replicated this gear by laser cutting and stacking the plywood to get a perfect fit. For the body of the prototype, we cut multiple slots out so we could find the best fit and placement for the BLE feather and batteries. </p>
 		</div>
 
 		<div class="pics">
-			<img class="portpics" src="assets/img/ai1.png" width="300px">
-			<img class="portpics" src="assets/img/ai2.png" width="225px">
+			<img class="portpics" src="assets/img/ai1.png" height="300px">
+			<img class="portpics" src="assets/img/ai2.png" height="300px">
 			<p class="description_txt_1"> Adobe Illustrator files used for the wooden prototype and final chassis. </p>
 		</div>
 
-		<p class="description_txt"> <span class= "boldwrd"> Final prototype: </span>
+		<p class="description_txt"> <span class= "boldwrd"> Final prototype: </span> </p>
 		<div class="pics">
-			<img class="portpics" src="assets/img/final1.png" width="300px">
-			<img class="portpics" src="assets/img/final2.png" width="300px">
+			<img class="portpics" src="assets/img/final1.png" width="350px">
+			<img class="portpics" src="assets/img/final2.png" width="350px">
 			<p class="description_txt_1"> We 3D printed wheels and treads using flex, and made the rest of the body using clear acrylic. It took multiple adjustments to find the perfect fit for the wheels and tread, by making sure there was not too much or too little slack. We made the top hole adjustable so we could slide the wheels on and off, and created washers to support the wheels onto the body. Using the same motors and BLE feather, we assembled the rest of the body similar to the wooden prototype, and we made cases for each of the components with easy access to switch them in and out. </p>
-			<img class="portpics" src="assets/img/light.JPG" width="300px">
-			<video class="portpics" width="480" height="270" preload controls muted="true">
+			<img class="portpics" src="assets/img/light.JPG" width="400px">
+			<video class="portpics" width="650"  preload controls autoplay loop muted="true">
 				<source src="assets/img/final.mp4">
 			</video>
 
 		</div>
+
+		<p class="description_txt"> <span class= "boldwrd"> Reflections: </span>
+		<p class="description_txt_1"> Overall, I'm happy with how this project turned out. I learned so much about physical prototyping throughout this process, from the importance of test cuts and precision, to basic electronics. If I had more time, I would try to make the body lighter or more durable. We used a chemical solvent as an adhesive for the acrylic, but we had issues with the acrylic detaching because of the weight of the batteries. I would try to make the body lighter, and perhaps design a 3D model for the body instead of using acrylic.  </p>
+
+
 		
 
 	
