--- a/misc.html
+++ b/misc.html
@@ -33,7 +33,7 @@
 	<div class="container">
 		<p class="dTitle"> miscellaneous creative work </p>
 		<div class="description">
-			<p class="description_txt"> Below I've included my work in photography, graphic design, video, and collage.
+			<p class="description_txt"> Below I've included my work in photography, graphic design, and video.
 			</p>
 			
 		</div>
@@ -41,14 +41,14 @@
 
 		<p class="description_txt"> <span class= "boldwrd"> Photography </span>
 		<div class="pics">
-			<img class="portpics" src="assets/img/p11.jpg" width="300px">
-			<img class="portpics" src="assets/img/p2.jpg" width="300px">
+			<img class="portpics" src="assets/img/p11.jpg" width="350px">
+			<img class="portpics" src="assets/img/p2.jpg" width="350px">
 			<img class="portpics" src="assets/img/p1.jpg" width="440px">
 			<img class="portpics" src="assets/img/p9.jpg" height="300px">
-			<img class="portpics" src="assets/img/p5.jpg" width="300px">
-			<img class="portpics" src="assets/img/p6.jpg" width="300px">
-			<img class="portpics" src="assets/img/p12.jpg" height ="300px">
-			<img class="portpics" src="assets/img/p7.JPG" width="300px">
+			<img class="portpics" src="assets/img/p5.jpg" width="350px">
+			<img class="portpics" src="assets/img/p6.jpg" width="350px">
+			<img class="portpics" src="assets/img/p12.jpg" height ="400px">
+			<img class="portpics" src="assets/img/p7.JPG" width="400px">
 	
 		</div>		
 
@@ -56,34 +56,24 @@
 
 		<p class="description_txt"> <span class= "boldwrd"> Graphics </span>
 		<div class="pics">
-			<img class="portpics" src="assets/img/info5-02.png" width="300px">
-			<img class="portpics" src="assets/img/info-03.png" width="300px">
-			<img class="portpics" src="assets/img/earth-07.png" width="300px">
-			<img class="portpics" src="assets/img/tally2-01.png" width="300px">
-			<img class="portpics" src="assets/img/me-02.png" width="300px">
-			<img class="portpics" src="assets/img/reese.png" width="300px">
-			<img class="portpics" src="assets/img/bamfest1.png" width="300px">
-			<img class="portpics" src="assets/img/bamfest3.jpg" width="300px">
+			<img class="portpics" src="assets/img/info5-02.png" width="350px">
+			<img class="portpics" src="assets/img/info-03.png" width="350px">
+			<img class="portpics" src="assets/img/earth-07.png" width="350px">
+			<img class="portpics" src="assets/img/tally2-01.png" width="350px">
+			<img class="portpics" src="assets/img/me-02.png" width="350px">
+			<img class="portpics" src="assets/img/reese.png" width="350px">
+			<img class="portpics" src="assets/img/bamfest1.png" width="350px">
+			<img class="portpics" src="assets/img/bamfest3.jpg" width="350px">
 			
 		</div>
 
 		<p class="description_txt"> <span class= "boldwrd"> Video </span>
 		<div class="pics">
-			<iframe width="560" height="315" src="https://www.youtube.com/embed/1FdodUdB860" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+			<iframe style="margin-bottom: 10px" width="560" height="315" src="https://www.youtube.com/embed/1FdodUdB860" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 			<p></p>
-			<iframe width="560" height="315" src="https://www.youtube.com/embed/-RKSNR9NEcE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+			<iframe style="margin: 10px" width="560" height="315" src="https://www.youtube.com/embed/-RKSNR9NEcE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 			
 		</div>
-		
-
-		<p class="description_txt"> <span class= "boldwrd"> Collage </span>
-		<div class="pics">
-			<img class="portpics" src="assets/img/collage_1.jpg" width="300px">
-			<img class="portpics" src="assets/img/collage_3.jpg" height="400px">
-			<img class="portpics" src="assets/img/collage_4.jpg" width="400px">
-			
-		</div>
-
 		
 
 
