--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 	<div class="containerhome">
 
 		<div id = "thumbnails"> 
-			<div class="txtcont"> <p style="font-size: 26px;"> Anissa is a <b> visual designer  </b> and <b>creative director </b>based in the Bay Area. </p> </div>
+			<div class="txtcont"> <p style="font-family: jaf-lapture-display, serif; font-size: 30px;"> Anissa is a <b> visual designer  </b> and <b>creative director </b>based in the Bay Area. </p> </div>
 			<div class="thumbs_wrapper">
 				<div class="title_thumb">design</div>
 				<div class="title_pics">
@@ -44,7 +44,7 @@
 					</a>
 					<a href="misc.html" class="txtover">
 						<img id = "misc" src="assets/img/misc.png" height="250px" width="400px">
-						<div id = "title"> <b> miscellaneous </b> <br> photography, graphic design, video, collage</div>
+						<div id = "title"> <b> miscellaneous </b> <br> photography, graphic design, video</div>
 					</a>	
 					<a href="az.html" class="txtover">
 						<img id = "az" src="assets/img/azlyrics.png" height="250px" width="400px">
@@ -70,19 +70,19 @@
 				<div class="title_thumb">creative direction</div>
 				<div class="title_pics">
 					<a href="i26.html" class="txtover">
-						<img id = "i26" src="assets/img/i26-1.jpg" height="250px">
+						<img id = "i26" src="assets/img/i26-1.jpg" height="300px">
 						<div id = "title"> i26 </div>
 					</a>
 					<a href="i25.html" class="txtover">
-						<img id = "i25" src="assets/img/i25-3.png" height="250px" width="160px">
+						<img id = "i25" src="assets/img/i25-3.png" height="300px" width="200px">
 						<div id = "title"> i25 </div>
 					</a>
 					<a href="i24.html" class="txtover">
-						<img id = "i24" src="assets/img/i24-7.png" height="250px">
+						<img id = "i24" src="assets/img/i24-7.png" height="300px">
 						<div id = "title"> Earthworks </div>
 					</a>
 					<a href="i23.html" class="txtover">
-						<img id = "i23" src="assets/img/i23-2.png" height="250px">
+						<img id = "i23" src="assets/img/i23-2.png" height="300px">
 						<div id = "title"> Matriarchs </div>
 					</a>
 						
