--- a/light.html
+++ b/light.html
@@ -9,27 +9,33 @@
 	<link rel="shortcut icon" type="image/x-icon" href="assets/img/favicon.ico?">
 </head>
 <body>
-	<div class="pagecont">
+	
 	<div class="menu">
-		<a href= "index.html" class="name"> Anissa Rashid</a>
+		<a href= "index.html" class="name"> 
+		<img id = "logo" src="assets/img/logoblack.png" height="80px" width="80px" >
+		<img id = "logo2" src="assets/img/logored.png" height="80px" width="80px" > </a>
 		<div class="menucontents">	
-			<p class="side"> Design </p>
-			<a href = "his.html" class="sidebar_item"> His Pills </a>	
-			<a href = "exhale.html" class="sidebar_item"> Exhale </a>	
-			<a href = "az.html" class="sidebar_item"> AZ Lyrics </a>
-			<a href = "light.html" class="sidebar_item"> Lightning McQueen </a>	
-			<a href = "misc.html" class="sidebar_item"> Misc </a>
-			<p class="side"> Creative Direction </p>	
-			<a href = "i26.html" class="sidebar_item"> i26 </a>
-			<a href = "i25.html" class="sidebar_item"> i25 </a>
-			<a href = "i24.html" class="sidebar_item"> Earthworks </a>
-			<a href = "i23.html" class="sidebar_item"> Matriarchs </a>
+			<div class="box">
+				<div class="col1">
+					<a href="index.html" class="side"> Work </a>
+				</div>
+				<div id="col2">
+					<a href = "his.html" class="sidebar_item"> His Pills </a>	
+					<a href = "exhale.html" class="sidebar_item"> Exhale </a>	
+					<a href = "misc.html" class="sidebar_item"> BARE </a>
+					<a href = "light.html" class="sidebar_item"> Lightning McQueen </a>	
+					<a href = "az.html" class="sidebar_item"> AZ Lyrics </a>
+					<a href = "graphics.html" class="sidebar_item"> Graphics </a>	
+					
+				</div>
+				
+			</div>	
 			<a href = "contact.html" class="contact"> About </a>
-			<a href = "assets/img/anissarashid_resume.pdf" class="contact"> Resume </a>
-
+			<a href = "assets/img/anissarashid_resume.pdf" class="contactt" target="_blank"> Resume </a>
 		</div>
 	</div>
 
+	<div class="pagecont">
 	<div class="container">
 		<p class="dTitle">Lightning McQueen</p>
 		<div class="description">
@@ -39,14 +45,14 @@
 			
 		</div>
 
-		<p class="description_txt"> <span class= "boldwrd"> Cardboard prototype: </span>
+		<p class="description_txt"> <span class= "boldwrd"> Cardboard prototype: </span> </p>
 		<div class="pics">
 			<img class="portpics" src="assets/img/card1.png" width="350px">
 			<img class="portpics" src="assets/img/card2.png" width="350px">
 			<p class="description_txt_1"> Our initial idea for this project was to create movement through rotating the outer planetary gears. We envisioned using a rubber tread around the gears and motorizing the central gear in order to create movement. We believed that the triangular shape would work best because it would be light, stable, and fast. </p>
 		</div>
 		
-		<p class="description_txt"> <span class= "boldwrd"> Motorized chassis prototype: </span>
+		<p class="description_txt"> <span class= "boldwrd"> Motorized chassis prototype: </span> </p>
 		<div class="pics">
 			<img class="portpics" src="assets/img/motor1.png" height="300">
 			<video class="portpics" width="650" preload controls autoplay loop muted="true">
@@ -73,7 +79,7 @@
 
 		</div>
 
-		<p class="description_txt"> <span class= "boldwrd"> Reflections: </span>
+		<p class="description_txt"> <span class= "boldwrd"> Reflections: </span> </p>
 		<p class="description_txt_1"> Overall, I'm happy with how this project turned out. I learned so much about physical prototyping throughout this process, from the importance of test cuts and precision, to basic electronics. If I had more time, I would try to make the body lighter or more durable. We used a chemical solvent as an adhesive for the acrylic, but we had issues with the acrylic detaching because of the weight of the batteries. I would try to make the body lighter, and perhaps design a 3D model for the body instead of using acrylic.  </p>
 
 
@@ -83,6 +89,7 @@
 
 
 	</div>
+</div>
 
 <div class="center-con">
 	<div class="round" >
