--- a/az.html
+++ b/az.html
@@ -9,29 +9,36 @@
 	<link rel="shortcut icon" type="image/x-icon" href="assets/img/favicon.ico?">
 </head>
 <body>
-	<div class="pagecont">
+	
 	<div class="menu">
-		<a href= "index.html" class="name"> Anissa Rashid</a>
+		<a href= "index.html" class="name"> 
+		<img id = "logo" src="assets/img/logoblack.png" height="80px" width="80px" >
+		<img id = "logo2" src="assets/img/logored.png" height="80px" width="80px" > </a>
 		<div class="menucontents">	
-			<p class="side"> Design </p>
-			<a href = "his.html" class="sidebar_item"> His Pills </a>	
-			<a href = "exhale.html" class="sidebar_item"> Exhale </a>	
-			<a href = "az.html" class="sidebar_item"> AZ Lyrics </a>
-			<a href = "light.html" class="sidebar_item"> Lightning McQueen </a>	
-			<a href = "misc.html" class="sidebar_item"> Misc </a>
-			<p class="side"> Creative Direction </p>	
-			<a href = "i26.html" class="sidebar_item"> i26 </a>
-			<a href = "i25.html" class="sidebar_item"> i25 </a>
-			<a href = "i24.html" class="sidebar_item"> Earthworks </a>
-			<a href = "i23.html" class="sidebar_item"> Matriarchs </a>
+			<div class="box">
+				<div class="col1">
+					<a href="index.html" class="side"> Work </a>
+				</div>
+				<div id="col2">
+					<a href = "his.html" class="sidebar_item"> His Pills </a>	
+					<a href = "exhale.html" class="sidebar_item"> Exhale </a>	
+					<a href = "misc.html" class="sidebar_item"> BARE </a>
+					<a href = "light.html" class="sidebar_item"> Lightning McQueen </a>	
+					<a href = "az.html" class="sidebar_item"> AZ Lyrics </a>
+					<a href = "graphics.html" class="sidebar_item"> Graphics </a>	
+					
+				</div>
+				
+			</div>	
 			<a href = "contact.html" class="contact"> About </a>
-			<a href = "assets/img/anissarashid_resume.pdf" class="contact"> Resume </a>
+			<a href = "assets/img/anissarashid_resume.pdf" class="contactt" target="_blank"> Resume </a>
 		</div>
 	</div>
 
-	<div class="container">
+	<div class="pagecont">
+	<div class="container" style="max-width: 950px; ">
 		<p class="dTitle">AZ Lyrics - Redesign </p>
-		<div class="description">
+		<div class="description" style="max-width: 800px;">
 			<p class="description_txt"> As a project for the Web Design Decal (Spring 2019), my team and I redesinged the AZ Lyrics website. We were inspried by brutalist design, and decided to completely redesign the wesite to make it more user friendly and modern. <br>
 				<br> <span style="font-weight: 600;"> Timeline: </span> 2 weeks - Spring 2019
 				 <br> <span style="font-weight: 600;"> Design challenge: </span> Redesign the AZ Lyrics website, with a landing page, search page, lyric page, and artist page. 
@@ -39,41 +46,41 @@
 			
 		</div>
 
-		<p class="description_txt"> <span class= "boldwrd"> First iteration: </span>
+		<p class="description_txt"  > <span class= "boldwrd"> First iteration: </span> </p>
 		<div class="pics">
-			<img class="portpics" src="assets/img/az1.png" width="370px">
-			<img class="portpics" src="assets/img/az2.png" width="370px">
-			<img class="portpics" src="assets/img/az3.png" width="370px">
-			<img class="portpics" src="assets/img/az4.png" width="370px">
-			<p class="description_txt_1"> Above are our first iterations for the home page and lyric page redesigns, and below those is how the current AZ Lyrics website looks. We wanted to keep the site as simple as possible, while keeping some of the elements such as color and the alphabet theme consistent. We simplified the homepage to only include text and no images, and we wanted to add a feature to the lyric page that allowed users to easily navigate to the album or artist of the song they're on.  </p>
+			<img class="portpics" src="assets/img/az1.png" width="400px">
+			<img class="portpics" src="assets/img/az2.png" width="400px">
+			<img class="portpics" src="assets/img/az3.png" width="400px">
+			<img class="portpics" src="assets/img/az4.png" width="400px">
+			<p class="description_txt_1" style="max-width: 800px;"> Above are our first iterations for the home page and lyric page redesigns, and below those is how the current AZ Lyrics website looks. We wanted to keep the site as simple as possible, while keeping some of the elements such as color and the alphabet theme consistent. We simplified the homepage to only include text and no images, and we wanted to add a feature to the lyric page that allowed users to easily navigate to the album or artist of the song they're on.  </p>
 		</div>
 		
-		<p class="description_txt"> <span class= "boldwrd"> Wireframe: </span>
+		<p class="description_txt" > <span class= "boldwrd"> Wireframe: </span> </p>
 		<div class="pics">
-			<img class="portpics" src="assets/img/az5.png" width="370px">
-			<img class="portpics" src="assets/img/az6.png" width="370px">
-			<img class="portpics" src="assets/img/az7.png" width="370px">
-			<img class="portpics" src="assets/img/az8.png" width="370px">
-			<p class="description_txt_1"> We inspired by brutalist design and decided to further simplify the site. To make the site more minimal we decided to use a light gray background instead of the original purple and reduced the amount of text and image even more, only keeping the necessary information.  </p> 
-			<p class="description_txt_1"> For the homepage, we wanted to make it as easy as possible for users to search for their desired song, artist, or album, and we kept some elements similar to our previous idea - such as the font and eye logo. </p>
-			<p class="description_txt_1">The top right is the wireframe for the search page, so if somebody searches for a particular artist, they can clearly see the results for top songs, albums, artist results through the bold text or recognizable visuals. </p>
-			<p class="description_txt_1"> The bottom left is the artist page that someone lands on if they click to a particular artist. This includes a profile shot, their top albums, and top songs, which are also links that can take people to those ablums or songs. Again, we wanted to make this page as visually simple and as easy to navigate as possible. We also decided to make the picture and title of the artist more playful and colorful in order to bring some life and personality of the artist back to the site. </p>
-			<p class="description_txt_1"> The bottom right is the landing page for the song lyrics. We made the text larger and more readable, and included links to the album or artist if somebody wants more from that artist. </p> 
+			<img class="portpics" src="assets/img/az5.png" width="400px">
+			<img class="portpics" src="assets/img/az6.png" width="400px">
+			<img class="portpics" src="assets/img/az7.png" width="400px">
+			<img class="portpics" src="assets/img/az8.png" width="400px">
+			<p class="description_txt_1" style="max-width: 800px;"> We inspired by brutalist design and decided to further simplify the site. To make the site more minimal we decided to use a light gray background instead of the original purple and reduced the amount of text and image even more, only keeping the necessary information.  </p> 
+			<p class="description_txt_1" style="max-width: 800px;"> For the homepage, we wanted to make it as easy as possible for users to search for their desired song, artist, or album, and we kept some elements similar to our previous idea - such as the font and eye logo. </p>
+			<p class="description_txt_1" style="max-width: 800px;">The top right is the wireframe for the search page, so if somebody searches for a particular artist, they can clearly see the results for top songs, albums, artist results through the bold text or recognizable visuals. </p>
+			<p class="description_txt_1" style="max-width: 800px;"> The bottom left is the artist page that someone lands on if they click to a particular artist. This includes a profile shot, their top albums, and top songs, which are also links that can take people to those ablums or songs. Again, we wanted to make this page as visually simple and as easy to navigate as possible. We also decided to make the picture and title of the artist more playful and colorful in order to bring some life and personality of the artist back to the site. </p>
+			<p class="description_txt_1" style="max-width: 800px;"> The bottom right is the landing page for the song lyrics. We made the text larger and more readable, and included links to the album or artist if somebody wants more from that artist. </p> 
 		</div>
 
 
-		<p class="description_txt"> <span class= "boldwrd"> Final website: </span>
+		<p class="description_txt"> <span class= "boldwrd"> Final website: </span> </p>
 		<div class="pics">
 			<a href= "http://anissarashid.me/azlyrics/"> <video class="portpics" width="697" preload controls autoplay loop muted="true">
 				<source src="assets/img/azvid.mp4">
-			</video> </href>
+			</video> </a>
 
 		</div>
 		
 
 	
 
-
+	</div>
 	</div>
 <div class="center-con">
 	<div class="round" >
