--- a/contact.html
+++ b/contact.html
@@ -11,45 +11,62 @@
 
 </head>
 <body >
-	<div class="pagecont">
 	<div class="menu">
-		<a href= "index.html" class="name"> Anissa Rashid</a>
+		<a href= "index.html" class="name"> 
+		<img id = "logo" src="assets/img/logored.png" height="80px" width="80px" >
+		<img id = "logo2" src="assets/img/logored.png" height="80px" width="80px" > </a>
 		<div class="menucontents">	
-			<p class="side"> Design </p>
-			<a href = "his.html" class="sidebar_item"> His Pills </a>	
-			<a href = "exhale.html" class="sidebar_item"> Exhale </a>	
-			<a href = "az.html" class="sidebar_item"> AZ Lyrics </a>
-			<a href = "light.html" class="sidebar_item"> Lightning McQueen </a>	
-			<a href = "misc.html" class="sidebar_item"> Misc </a>
-			<p class="side"> Creative Direction </p>	
-			<a href = "i26.html" class="sidebar_item"> i26 </a>
-			<a href = "i25.html" class="sidebar_item"> i25 </a>
-			<a href = "i24.html" class="sidebar_item"> Earthworks </a>
-			<a href = "i23.html" class="sidebar_item"> Matriarchs </a>
-			<a href = "contact.html" class="contact"> About </a>
-			<a href = "assets/img/anissarashid_resume.pdf" class="contact"> Resume </a>
+			<div class="box">
+				<div class="col1" >
+					<a href="index.html" class="side" style="color: #b51414"> Work </a>
+				</div>
+				<div id="col2">
+					<a href = "his.html" class="sidebar_item"> His Pills </a>	
+					<a href = "exhale.html" class="sidebar_item"> Exhale </a>	
+					<a href = "misc.html" class="sidebar_item"> BARE </a>
+					<a href = "light.html" class="sidebar_item"> Lightning McQueen </a>	
+					<a href = "az.html" class="sidebar_item"> AZ Lyrics </a>
+					<a href = "light.html" class="sidebar_item"> Graphics </a>	
+					
+				</div>
+				
+			</div>	
+			<a href = "contact.html" class="contact" style="color: #b51414"> About </a>
+			<a href = "assets/img/anissarashid_resume.pdf" class="contactt" style="color: #b51414" target="_blank"> Resume </a>
 		</div>
 	</div>
 
-	<div class="containercontact">
+	
+	<div class="pagecont">
+	<div class="container" style="max-width: 1000px; ">
 		
-	<p class="dTitle"> About me</p>
 
-	<div class="pics">
-		<img class="contactpic" src="assets/img/about.png" height ="400px">
+	<div class="thumbs_wrapper" >
+	<div class="picss">
+		<img class="contactpic" src="assets/img/pfp2.png" width ="300px" > 
+		<h1 class="ml6">
+		  <span class="text-wrapper">
+		    <span class="letters">welcome!</span>
+		  </span>
+		</h1>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
+	</div>
+	<div class="picss">
+		<p class="description_txt" style="margin-top: 0;"> Hello! My name is Anissa (she/her) and I'm currently studying Data Science and Economics at UC Berkeley. I'm an aspiring designer and believe in building research-driven and community-based experiences. I'm also passionate about visually sharing stories and representing my communities throughout my creative work.
 
-		<p class="contacttxt"> Hello, I'm Anissa! I'm currently studying Economics, Data Science, and Design at UC Berkeley. I have a variety of experience in visual design, web design, branding, creative direction, and physical prototyping. 
-		<br><br> I'm a creative and driven person, and I'm passionate about designing beautiful, inclusive, and functional experiences. I believe in visually sharing stories and representing my communities throughout my creative work. I am currently looking for new opportunities to grow and develop as a designer. 
+		 <br><br> My education has given me a multidisciplinary foundation in statistics, programming, and economics, while also granting me the freedom to explore design. I've always been a creatively inclined person, leaning towards art and photography as forms of expression, and I've found design to be the optimal intersection between my technical and creative interests. Through coursework, student organizations, and personal projects, I've been able to gain experience in visual design, branding, creative direction, and physical prototyping. 
+
+		<br><br> In my free time, I enjoy brewing coffee, taking care of my house plants, and spending time with my grandparents. I'm always looking for opportunities to grow and develop as a designer, if any of the above is of interest please feel free to reach out to me at <a href="mailto: anissarashid@berkeley.edu"> anissarashid@berkeley.edu! </a>
 		
-		<br><br><a href = "assets/img/anissarashid_resume.pdf"> <span style="font-weight: bold; font-size: 20px;"> Resume </span></a>
+		<br><br><a href = "assets/img/anissarashid_resume.pdf" target="_blank"> <span style="font-weight: bold; font-size: 20px; color: #b51414"> Resume </span></a>
 
-		<br><br> <span style="font-weight: bold; font-size: 20px"> Let's talk! </span>
-		<br> Email: anissarashid@berkeley.edu 
 
 		</p>	
 
 	</div>
+</div>
 
+</div> 
 </div>
 	
 <div class="center-con">
@@ -65,6 +82,25 @@
 
 </body>
 
+<script type="text/javascript">
+	var textWrapper = document.querySelector('.ml6 .letters');
+	textWrapper.innerHTML = textWrapper.textContent.replace(/\S/g, "<span class='letter'>$&</span>");
+
+	anime.timeline({loop: false})
+  .add({
+    targets: '.ml6 .letter',
+    translateY: ["1.1em", 0],
+    translateZ: 0,
+    duration: 1000,
+    delay: (el, i) => 50 * i
+  }).add({
+    targets: '.ml6',
+    color: '#b51414',
+    duration: 1000,
+    easing: "easeOutExpo",
+    delay: 1000
+  });
+</script>
 
 
 
