--- a/exhale.html
+++ b/exhale.html
@@ -9,26 +9,33 @@
 	<link rel="shortcut icon" type="image/x-icon" href="assets/img/favicon.ico?">
 </head>
 <body>
-	<div class="pagecont">
+	
 	<div class="menu">
-		<a href= "index.html" class="name"> Anissa Rashid</a>
+		<a href= "index.html" class="name"> 
+		<img id = "logo" src="assets/img/logoblack.png" height="80px" width="80px" >
+		<img id = "logo2" src="assets/img/logored.png" height="80px" width="80px" > </a>
 		<div class="menucontents">	
-			<p class="side"> Design </p>
-			<a href = "his.html" class="sidebar_item"> His Pills </a>	
-			<a href = "exhale.html" class="sidebar_item"> Exhale </a>	
-			<a href = "az.html" class="sidebar_item"> AZ Lyrics </a>
-			<a href = "light.html" class="sidebar_item"> Lightning McQueen </a>	
-			<a href = "misc.html" class="sidebar_item"> Misc </a>
-			<p class="side"> Creative Direction </p>	
-			<a href = "i26.html" class="sidebar_item"> i26 </a>
-			<a href = "i25.html" class="sidebar_item"> i25 </a>
-			<a href = "i24.html" class="sidebar_item"> Earthworks </a>
-			<a href = "i23.html" class="sidebar_item"> Matriarchs </a>
+			<div class="box">
+				<div class="col1">
+					<a href="index.html" class="side"> Work </a>
+				</div>
+				<div id="col2">
+					<a href = "his.html" class="sidebar_item"> His Pills </a>	
+					<a href = "exhale.html" class="sidebar_item"> Exhale </a>	
+					<a href = "misc.html" class="sidebar_item"> BARE </a>
+					<a href = "light.html" class="sidebar_item"> Lightning McQueen </a>	
+					<a href = "az.html" class="sidebar_item"> AZ Lyrics </a>
+					<a href = "graphics.html" class="sidebar_item"> Graphics </a>	
+					
+				</div>
+				
+			</div>	
 			<a href = "contact.html" class="contact"> About </a>
-			<a href = "assets/img/anissarashid_resume.pdf" class="contact"> Resume </a>
+			<a href = "assets/img/anissarashid_resume.pdf" class="contactt" target="_blank"> Resume </a>
 		</div>
 	</div>
 
+	<div class="pagecont">
 	<div class="container">
 		<p class="dTitle">Exhale</p>
 		<div class="description">
@@ -36,14 +43,14 @@
 				<br> After thinking about the types of distributable products I could create, I noticed that mental health on college campuses is often neglected, so I wanted to design a website to target one facet of this complex issue. I decided to build a website with a breathing activity, which I saw as a potential solution to help reduce some of the stress students experience, and wanted to ensure that this resource was accessible and intuitive to use.  
 		</div>
 
-		<p class="description_txt"> <span class= "boldwrd"> Sketch: </span>
+		<p class="description_txt"> <span class= "boldwrd"> Sketch: </span> </p>
 		<div class="pics">
 			<img class="portpics" src="assets/img/circle.png" width="225px">
 	
 			<p class="description_txt_1"> My initial thought was to create a circle expanded and contracted to the rhythm of a breath that looked like the picture above. </p>
 		</div>
 		
-		<p class="description_txt"> <span class= "boldwrd"> Website: </span>
+		<p class="description_txt"> <span class= "boldwrd"> Website: </span> </p>
 		<div class="pics">
 			<a href="https://anissarashid.github.io/exhale/">
 			<video class="portpics" width="700" preload controls autoplay loop muted >
@@ -54,7 +61,7 @@
 		</div>
 
 		
-		<p class="description_txt"> <span class= "boldwrd"> Branding Materials: </span>
+		<p class="description_txt"> <span class= "boldwrd"> Branding Materials: </span> </p>
 		<div class="pics">
 			<img class="portpics" src="assets/img/stickernew.png" width="500px">
 			<img class="portpics" src="assets/img/stickernew2.png" width="500px">
@@ -67,6 +74,7 @@
 
 
 	</div>
+</div>
 
 <div class="center-con">
 	<div class="round" >
@@ -74,7 +82,6 @@
 		    <span class="arrow primera next "></span>   
 		</div>
 	</div>
-</div>
 
 </body>
 </html>
