--- a/his.html
+++ b/his.html
@@ -17,26 +17,33 @@
 </head>
 
 <body>
-	<div class="pagecont">
+	
 	<div class="menu">
-		<a href= "index.html" class="name"> Anissa Rashid</a>
+		<a href= "index.html" class="name"> 
+		<img id = "logo" src="assets/img/logoblack.png" height="80px" width="80px" >
+		<img id = "logo2" src="assets/img/logored.png" height="80px" width="80px" > </a>
 		<div class="menucontents">	
-			<p class="side"> Design </p>
-			<a href = "his.html" class="sidebar_item"> His Pills </a>	
-			<a href = "exhale.html" class="sidebar_item"> Exhale </a>	
-			<a href = "az.html" class="sidebar_item"> AZ Lyrics </a>
-			<a href = "light.html" class="sidebar_item"> Lightning McQueen </a>	
-			<a href = "misc.html" class="sidebar_item"> Misc </a>
-			<p class="side"> Creative Direction </p>	
-			<a href = "i26.html" class="sidebar_item"> i26 </a>
-			<a href = "i25.html" class="sidebar_item"> i25 </a>
-			<a href = "i24.html" class="sidebar_item"> Earthworks </a>
-			<a href = "i23.html" class="sidebar_item"> Matriarchs </a>
+			<div class="box">
+				<div class="col1">
+					<a href="index.html" class="side"> Work </a>
+				</div>
+				<div id="col2">
+					<a href = "his.html" class="sidebar_item"> His Pills </a>	
+					<a href = "exhale.html" class="sidebar_item"> Exhale </a>	
+					<a href = "misc.html" class="sidebar_item"> BARE </a>
+					<a href = "light.html" class="sidebar_item"> Lightning McQueen </a>	
+					<a href = "az.html" class="sidebar_item"> AZ Lyrics </a>
+					<a href = "graphics.html" class="sidebar_item"> Graphics </a>	
+					
+				</div>
+				
+			</div>	
 			<a href = "contact.html" class="contact"> About </a>
-			<a href = "assets/img/anissarashid_resume.pdf" class="contact"> Resume </a>
+			<a href = "assets/img/anissarashid_resume.pdf" class="contactt" target="_blank"> Resume </a>
 		</div>
 	</div>
 
+	<div class="pagecont">
 	<div class="container">
 		<p class="dTitle"> His Pills </p>
 		<div class="description">
@@ -46,7 +53,7 @@
 			
 		</div>
 
-		<p class="description_txt"> <span class= "boldwrd"> Sketching and Ideation </span>
+		<p class="description_txt"> <span class= "boldwrd"> Sketching and Ideation </span> </p>
 		<div class="pics" style="width: 800px;">
 			<img class="portpics" src="assets/img/his1.png" height ="200px">
 			<img class="portpics" src="assets/img/his2.png" height="200px">
@@ -58,20 +65,20 @@
 			<p class="description_txt_1"> I wanted His Pills to have bold and playful branding, without presenting a hyper-masculine tone through the font or color palette. I explored multiple different color palettes and logo designs to sucessfully convey this brand as one that pushes healthcare boundaries and appeals to men without conforming to gender stereotypes. </p>
 		</div>
 		
-		<p class="description_txt"> <span class= "boldwrd"> Logo Design and Color Palette </span>
+		<p class="description_txt"> <span class= "boldwrd"> Logo Design and Color Palette </span> </p>
 		<div class="pics">
 			<img class="portpics" src="assets/img/logosfinal3.png" height="200px">
 			<p class="description_txt_1"> I was torn between using a clean, bold, sans serif font, but I chose to use this script font, Cabazon, because it achieved the strength and playful tone that I envisioned for this brand. Just using a lower case "H" rather than "His" helped with readability and simplicity. I used a deep navy, red-orange, and a nude peach color palette because both the navy and red were bold colors that the nude helped to balance out. I also enjoyed how this palette was strong and saturated without being overtly masculine.  </p> 
 		</div>
 
-		<p class="description_txt"> <span class= "boldwrd"> Packaging </span>
+		<p class="description_txt"> <span class= "boldwrd"> Packaging </span> </p>
 		<div class="pics">
 			<img class="portpics" src="assets/img/mock4.jpg" width="500px">
 			<img class="portpics" src="assets/img/mock6.png"width="500px" >
 			<p class="description_txt_1"> Packaging for the pill boxes, each containing 32 tablets for the month.</p> 
 		</div>
 
-		<p class="description_txt"> <span class= "boldwrd"> Website </span>
+		<p class="description_txt"> <span class= "boldwrd"> Website </span> </p>
 		<div class="pics">
 			<video width="500px"  preload controls autoplay loop muted="true" style="margin-bottom: 20px;">
 				<source src="assets/img/website.mp4" type="video/mp4">
@@ -79,14 +86,14 @@
 			<p class="description_txt_1"> Wireframe for the company's website, includes information and help about the pill. </p> 
 		</div>
 
-		<p class="description_txt"> <span class= "boldwrd"> Official Branding Guidelines </span>
+		<p class="description_txt"> <span class= "boldwrd"> Official Branding Guidelines </span> </p>
 		<div class="pics">
 			<img class="portpics" src="assets/img/hisfinal-04.png" width="400px" >
 			
 		</div>
 
 
-		<p class="description_txt"> <span class= "boldwrd"> Posters </span>
+		<p class="description_txt"> <span class= "boldwrd"> Posters </span> </p>
 		<div class="pics">
 			<img class="portpics" src="assets/img/poster1.png" width ="300px" > 
 			<img class="portpics" src="assets/img/poster2.png" width ="300px" >
@@ -97,7 +104,7 @@
 			<p class="description_txt_1"> I created posters to advertise the brand in public spaces. I used bold typography and suggestive imagery to draw attention towards the posters, and to highlight this brands mission of providing a safe and alternative method of birth control. His Pills was designed to not only reinforce that birth control is a shared responsibility, but to also normalize conversations around sex and sex education. I felt that using more suggestive imagery and color pallettes would be an effective way to raise these important conversations. I also am aware that a male birth control pill is designed for mainly heterosexual relationships as its purpose is to prevent pregnancy, and that condoms are still the most effective way to prevent against STI's, so I wanted to make this disclaimer on the posters.  </p> 
 		</div>
 		
-		<p class="description_txt"> <span class= "boldwrd"> Business Cards </span>
+		<p class="description_txt"> <span class= "boldwrd"> Business Cards </span> </p>
 		<div class="pics">
 			<img class="portpics" src="assets/img/buscards1.png" height="200px" >
 			<img class="portpics" src="assets/img/buscards2.png" height="200px" >
@@ -108,7 +115,7 @@
 			<p class="description_txt_1"> I created three business cards that each used one color from the palette, and I paired the logo with Gopher. In order to maintain cohesion among the posters, I used the same line drawing and "wavy" type. These business cards are simple and cohesive with the other assets.  </p> 
 		</div>
 
-		<p class="description_txt"> <span class= "boldwrd"> Products </span>
+		<p class="description_txt"> <span class= "boldwrd"> Products </span> </p>
 		<div class="pics">
 			<img class="portpics" src="assets/img/posterfinalmock1.png" width="350px" >
 			<img class="portpics" src="assets/img/posterfinalmock2.png" width="350px" >
@@ -119,7 +126,7 @@
 			<img class="portpics" src="assets/img/mock2.jpg" height="400px" >
 		</div>
 
-		<p class="description_txt"> <span class= "boldwrd"> Reflection </span>
+		<p class="description_txt"> <span class= "boldwrd"> Reflection </span> </p>
 			<p class="description_txt_1">
 				Overall, I’m happy with how this project turned out. I learned so many new skills and techniques with Illustrator throughout this process. If I had more time, I would create more supplementary assets, like an app mockup, to further establish this brand's purpose. I would also explore the art direction more, by leading my own photoshoots and creating more illustrations. I’m really glad I completed this project, and I hope to continue doing brand identity design.
 			</p>
@@ -129,6 +136,10 @@
 
 
 	</div>
+</div>
+
+
+
 <div class="center-con">
 	<div class="round" >
 		<div id="cta">
@@ -139,4 +150,12 @@
 
 
 </body>
+
+
+
 </html>
+
+
+
+
+
