--- a/contact.html
+++ b/contact.html
@@ -56,7 +56,7 @@
 
 		 <br><br> My education has given me a multidisciplinary foundation in statistics, programming, and economics, while also granting me the freedom to explore design. I've always been a creatively inclined person, leaning towards art and photography as forms of expression, and I've found design to be the optimal intersection between my technical and creative interests. Through coursework, student organizations, and personal projects, I've been able to gain experience in visual design, branding, creative direction, and physical prototyping. 
 
-		<br><br> In my free time, I enjoy brewing coffee, taking care of my house plants, and spending time with my grandparents. I'm always looking for opportunities to grow and develop as a designer, if any of the above is of interest please feel free to reach out to me at <a href="mailto: anissarashid@berkeley.edu"> anissarashid@berkeley.edu! </a>
+		<br><br> In my free time, I enjoy brewing coffee, taking care of my house plants, and finding new music via the Spotify related artists tab. I'm always looking for opportunities to grow and develop as a designer, if any of the above is of interest please feel free to reach out to me at <a href="mailto: anissarashid@berkeley.edu"> anissarashid@berkeley.edu! </a>
 		
 		<br><br><a href = "assets/img/anissarashid_resume.pdf" target="_blank"> <span style="font-weight: bold; font-size: 20px; color: #b51414"> Resume </span></a>
 
